# portfolio-showcase-app

./: .gitignore  README.md  SANITIZATION_REPORT.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml
backend/graphs/: recipe_graph.py  state.py
backend/nodes/: classify_query.py  cookware_check.py  format_response.py  reasoning.py  refuse_query.py
backend/prompts/: CLASSIFY_QUERY.txt  COOKWARE_CHECK.txt  REASONING.txt
backend/schemas/: api.py
backend/services/: anthropic.py  mock.py  protocols.py
backend/tests/: conftest.py  test_api.py  test_classify_query.py  test_cookware_check.py  test_extract_text.py  test_format_response.py  test_prompt_loader.py  test_reasoning.py  test_recipe_graph.py  test_refuse_query.py  test_state.py
backend/tools/: cookware.py  tavily_search.py
backend/utils/: content.py  logging.py  prompt_loader.py
docs/: sanitization-report.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/__tests__/components/: ChatContainer.test.tsx  ChatInput.test.tsx  ChatMessage.test.tsx
frontend/__tests__/lib/: api.test.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  ErrorBanner.tsx  LoadingIndicator.tsx
frontend/components/ui/: card.tsx  input.tsx
frontend/lib/: api.ts  schemas.ts  types.ts
